atualizacao de aula

--- a/frontEnd/CSS/aula07FlexBox/src/css/style.css
+++ b/frontEnd/CSS/aula07FlexBox/src/css/style.css
@@ -19,6 +19,7 @@ body {
 .container {
         display: flex;
         justify-content: center;
+        background-color: rgb(141, 77, 152)
 }
 
 .quadrado {
