--- a/frontEnd/CSS/aula07FlexBox/src/css/style.css
+++ b/frontEnd/CSS/aula07FlexBox/src/css/style.css
@@ -25,7 +25,9 @@ body {
 .quadrado {
     width: 150px;
     height: 150px;
-    margin: 5px;
+    margin: 15px;
+    padding: 25px;
+    border: 5px dashed black;
     background-color: rgb(0, 0, 0);
     color: white;
     display: flex;
@@ -41,6 +43,6 @@ body {
     background-color: hsl(0, 100%, 50%);
 }
 .quadrado.amarelo {
-    background-color: #ffff0050;
+    background-color: #e4e40a;
     color: black;
 }
