--- a/frontEnd/CSS/aula09CidadeMundo/CSS/style.css
+++ b/frontEnd/CSS/aula09CidadeMundo/CSS/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0,5rem;
+    padding: 0,5rem;
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
